<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ro.pub.cs.systems.eim.lab10.googlemapsgeofencing.view.GoogleMapsActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="3">

        <TextView
            android:id="@+id/current_location_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2" />

        <EditText
            android:id="@+id/latitude_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:ems="5"
            android:hint="@string/latitude"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/longitude_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:ems="5"
            android:hint="@string/longitude"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/radius_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:ems="5"
            android:hint="@string/radius"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/current_location" />

        <Button
            android:id="@+id/geofence_status_button"
            android:layout_width="100dp"
            android:layout_height="79dp"
            android:layout_row="0"
            android:layout_rowSpan="0"
            android:layout_column="1"
            android:layout_gravity="center_vertical"
            android:background="@color/colorRed"
            android:gravity="bottom|center"
            android:text="@string/add_to_geofence" />

        <TextView
            android:id="@+id/geofence_status"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_row="2"
            android:layout_column="2"
            android:text="Last Msg:" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:text="Geofence status:"/>

    </GridLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <fragment
        android:id="@+id/google_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.MapFragment" />

</LinearLayout>
